--- a/.github/workflows/blog-cron.yml
+++ b/.github/workflows/blog-cron.yml
@@ -46,9 +46,10 @@ jobs:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: ./out/ 
+          local-dir: ./out/
           server-dir: ./public_html/
-          delete-destination: false
+          timeout: 60000
+          security: loose
 
       - name: 8. Notificar en Telegram
         uses: appleboy/telegram-action@master
