--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev",
     "lint": "eslint .",
     "start": "next start",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:web3forms": "node scripts/test-web3forms.js",
     "generate-post": "node scripts/generate-post.js",
     "generate-post:devlocal": "node scripts/generate-post-devlocal.js"
   },
@@ -68,7 +71,13 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@vitejs/plugin-react": "^4.3.4",
     "cross-env": "^7.0.3",
+    "jsdom": "^25.0.1",
+    "vitest": "^2.1.6",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
