added newletter flux

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "test:coverage": "vitest run --coverage",
     "test:web3forms": "node scripts/test-web3forms.js",
     "generate-post": "node scripts/generate-post.js",
-    "generate-post:devlocal": "node scripts/generate-post-devlocal.js"
+    "generate-post:devlocal": "node scripts/generate-post-devlocal.js",
+    "send-newsletter": "node scripts/send-newsletter.js",
+    "send-newsletter:devlocal": "node scripts/send-newsletter-devlocal.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
